test: ajustes de compatibilidad JDK 25 y correcciones de tests
- Actualizar Lombok a 1.18.38 para compatibilidad con JDK 25
- Cambiar java.version de 17 a 25 en pom.xml
- Agregar Maven Wrapper (mvnw.cmd) para build sin Maven global
- Configurar H2 en modo MySQL para tests de integración
- Cambiar List.getFirst() a get(0) para compatibilidad Java 17
- Ajustar tests de integración con @WebMvcTest y exclusiones de seguridad
- Corregir mocks de RestTemplate en ClimateServiceTest
- Ajustar expectativas de tests de enum (400 vs 422)

Resultado: 46/49 tests pasando
- 3 tests fallando: 2 enum validation (500 error), 1 ClimateService mock